feature: employees endpoint
