# internal/modules/employee/router.go
@@ -1,1 +1,17 @@
 package employee
+
+import (
+	"github.com/daulet-omarov/ai-task-team-manager/internal/middleware"
+	"github.com/go-chi/chi/v5"
+)
+
+func RegisterRoutes(r chi.Router, h *Handler) {
+	r.Route("/employees", func(r chi.Router) {
+		r.Use(middleware.JWTMiddleware)
+		r.Post("/", h.Create)
+		r.Get("/", h.GetAll)
+		r.Get("/{id}", h.GetByID)
+		r.Put("/{id}", h.Update)
+		r.Delete("/{id}", h.Delete)
+	})
+}
